[aliases]
clean_egg_info = egg_info -Db ''
release = clean_egg_info sdist
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = https://packages.smartme.io/python

[sdist]
formats = gztar

[metadata]
name = arancino
version = 2.0.0
description = Arancino library Python Module
author = SmartME.io
author_email = info@smartme.io
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license_file = LICENSE
keywords = CPAN PyPI distutils eggs package management
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Utilities
