[aliases]
clean_egg_info = egg_info -Db ''
release = clean_egg_info sdist
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = https://packages.smartme.io/python

[sdist]
formats = gztar

[metadata]
name = arancino
version = 2.7.0
description = Arancino Daemon for Arancino Library
author = Sergio Tomasello
author_email = sergio@smartme.io
long_description =
    Receives commands from Arancino Library (uC) trough the Arancino Cortex Protocol
    over serial connection. It is designed to run under Arancino OS and can manage
    multiple serial connections.
long_description_content_type = text/markdown; charset=UTF-8
platforms = Unix
license = Apache License, Version 2.0
license_file = LICENSE
url = http://www.arancino.cc
keywords = CPAN PyPI distutils eggs package management
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    certifi>=2021.10.8
    chardet>=3.0.4
    click>=8.1.3
    Flask>=2.0.3
    Flask-HTTPAuth>=4.5.0
    gunicorn>=20.0.4
    hiredis>=2.0.0
    idna>=2.10
    itsdangerous>=2.1.1
    Jinja2>=3.0.3
    MarkupSafe>=2.0.1
    netifaces>=0.10.9
    paho-mqtt>=1.5.1
    pyserial>=3.5
    redis>=4.3.4
    requests>=2.26.0
    rmtest>=0.7.0
    semantic-version>=2.10.0
    uptime>=3.0.1
    urllib3>=1.25.11
    Werkzeug>=2.0.3
    ruamel.yaml>=0.17.21
    pyyaml>=6.0
    adafruit-circuitpython-ble>=8.3.8
    bleak==0.14.3
    msgpack>=1.0.3
    setuptools>=67.4.0
    
python_requires = >= 3.5

[options.packages.find]
exclude =
    test

[options.data_files]
extras =
    extras/pre-install.sh
    extras/post-install.sh
    extras/arancino.service
    extras/vars.env
config =
    config/arancino.cfg.yml
    config/gunicorn.cfg.py

[options.entry_points]
console_scripts =
    arancino = arancino.ArancinoStart:run
